--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ height: 150px;
         width: 250px;
 
     }
-    /* .snowman {
+     .snowman {
       
         opacity: 0; 
         visibility: hidden;
@@ -146,8 +146,8 @@ height: 150px;
             opacity: 1;
             visibility: visible; 
         }
-    }  */
-    */
+    }  
+
 
 .snow {
     position: absolute;
